# cefar-10-object-recognition

./: Makefile  README.md  pyproject.toml
cerfa_10_object_recognition/: evaluate.py
iris_classification/: evaluate.py  prepare.py  train.py
