[tool.poetry]
name = "iris-flower-classification-with-dvc"
version = "0.1.0"
description = "Program to train an Iris flower classification model. Given length and with of sepals and petals, the model should be able to predict what species the Iris flower is between virginica, setosa and versicolor."
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "iris_classification" }]

[tool.poetry.scripts]
prepare = "iris_classification.prepare:main"
train = "iris_classification.train:main"
evaluate = "iris_classification.evaluate:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
