[tool.poetry]
name = "cifar-10-object-recognition"
version = "0.1.0"
description = "Training for an object recognition model using CIFAR-10 dataset."
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cifar_10_object_recognition" }]

[tool.poetry.scripts]
prepare = "cifar_10_object_recognition.prepare:main"
train = "cifar_10_object_recognition.train:main"
evaluate = "cifar_10_object_recognition.evaluate:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
